[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/Awake/Awake.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://font/Awake/Awake.tres" type="DynamicFont" id=2]
[ext_resource path="res://levels/base_level/white_floor.png" type="Texture" id=3]
[ext_resource path="res://interfaces/game_over_screen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
use_mipmaps = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
use_mipmaps = true
font_data = ExtResource( 1 )

[node name="GameOverScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.952941, 0.952941, 0.952941, 1 )
scale = Vector2( 13, 13 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -207.93
margin_top = -207.598
margin_right = -167.93
margin_bottom = -167.598
rect_scale = Vector2( 10.4, 1 )
color = Color( 0.219608, 0.211765, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="."]
margin_left = -181.0
margin_top = -200.0
margin_right = 179.0
margin_bottom = -175.0
rect_min_size = Vector2( 360, 25 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "High Score: $500"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScore" type="Label" parent="."]
margin_left = -180.0
margin_top = -157.0
margin_right = 180.0
margin_bottom = -132.0
rect_min_size = Vector2( 360, 25 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.278431, 0.247059, 0.247059, 1 )
text = "Your earnings: $422"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -106.0
margin_right = 180.0
margin_bottom = 144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_right = 360.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 360.0
margin_bottom = 108.0
rect_min_size = Vector2( 360, 44 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.278431, 0.247059, 0.247059, 1 )
text = "Laundry Simulator"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer2" type="Control" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 360.0
margin_bottom = 162.0
rect_min_size = Vector2( 0, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 166.0
margin_right = 360.0
margin_bottom = 194.0
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 235.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 28 )
custom_fonts/font = ExtResource( 2 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
